[package]
name = "alloy-node-bindings"
description = "Ethereum execution-layer client bindings"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["std", "k256", "serde"] }
alloy-genesis.workspace = true
alloy-network.workspace = true
alloy-signer-local.workspace = true
alloy-signer.workspace = true
alloy-hardforks.workspace = true
k256.workspace = true
rand.workspace = true
serde_json = { workspace = true, features = ["std"] }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
ci_info.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
