[package]
name = "alloy-provider"
description = "Interface with an Ethereum blockchain"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-node-bindings = { workspace = true, optional = true }
alloy-signer-wallet = { workspace = true, optional = true }
alloy-rpc-client.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-rpc-types.workspace = true
alloy-transport-http = { workspace = true, optional = true }
alloy-transport-ipc = { workspace = true, optional = true }
alloy-transport-ws = { workspace = true, optional = true }
alloy-pubsub = { workspace = true, optional = true }
alloy-transport.workspace = true
alloy-primitives.workspace = true

async-stream = "0.3"
async-trait.workspace = true
auto_impl.workspace = true
dashmap = "5.5"
futures.workspace = true
lru = "0.12"
reqwest = { workspace = true, optional = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tracing.workspace = true
url = { workspace = true, optional = true }
futures-utils-wasm.workspace = true

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["std"] }
alloy-node-bindings.workspace = true
alloy-rlp.workspace = true
alloy-signer.workspace = true
alloy-signer-wallet.workspace = true

tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tempfile.workspace = true

[features]
default = ["reqwest", "reqwest-default-tls"]
pubsub = ["alloy-rpc-client/pubsub", "dep:alloy-pubsub"]
reqwest = [
    "dep:reqwest",
    "dep:url",
    "dep:alloy-transport-http",
    "alloy-rpc-client/reqwest",
]
hyper = ["dep:alloy-transport-http", "dep:url", "alloy-rpc-client/hyper"]
ws = ["pubsub", "alloy-rpc-client/ws", "alloy-transport-ws"]
ipc = ["pubsub", "alloy-rpc-client/ipc", "alloy-transport-ipc"]
reqwest-default-tls = ["alloy-transport-http?/reqwest-default-tls"]
reqwest-rustls-tls = ["alloy-transport-http?/reqwest-rustls-tls"]
reqwest-native-tls = ["alloy-transport-http?/reqwest-native-tls"]
anvil = ["reqwest", "dep:alloy-node-bindings", "dep:alloy-signer-wallet"]
