[package]
name = "alloy-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-json-rpc.workspace = true
alloy-networks.workspace = true
alloy-primitives.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-client.workspace = true

async-trait = "0.1.73"
futures-util = "0.3.28"
serde_json = { workspace = true, features = ["raw_value"] }
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0"
once_cell = "1.17"
reqwest = "0.11.22"
serial_test = "2.0.0"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros"] }
ethers-core = "2.0.10"

[features]
anvil = []