[package]
name = "alloy-providers"
description = "Ethereum JSON-RPC providers"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-networks.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-transport-http.workspace = true
alloy-transport.workspace = true

async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros"] }
ethers-core = "2.0.10"

[features]
anvil = []
