[package]
name = "alloy-providers"
description = "Ethereum JSON-RPC providers"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-trace-types.workspace = true
alloy-transport-http.workspace = true
alloy-transport.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
reqwest.workspace = true
auto_impl = "1.1.0"
tokio = { version = "1.33.0", features = ["sync"] }
futures.workspace = true
async-stream = "0.3.5"
lru = "0.12.2"
tracing.workspace = true

[dev-dependencies]
alloy-node-bindings.workspace = true
tokio = { version = "1.33.0", features = ["macros"] }

[features]
anvil = []
