[package]
name = "alloy-pubsub"
description = "Ethereum JSON-RPC publish-subscribe tower service and type definitions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-transport.workspace = true

bimap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower.workspace = true
tracing.workspace = true
