[package]
name = "alloy-rpc-client"
description = "RPC client"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-json-rpc.workspace = true
alloy-transport-http.workspace = true
alloy-transport.workspace = true

futures.workspace = true
pin-project.workspace = true
serde_json.workspace = true
tower.workspace = true
tracing.workspace = true

alloy-primitives = { workspace = true, optional = true }
alloy-pubsub = { workspace = true, optional = true }
alloy-transport-ws = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives.workspace = true
alloy-transport-ws.workspace = true
test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[features]
default = ["reqwest"]
reqwest = ["dep:url", "dep:reqwest", "alloy-transport-http/reqwest"]
hyper = ["dep:url", "dep:hyper", "alloy-transport-http/hyper"]
pubsub = ["dep:tokio", "dep:alloy-pubsub", "dep:alloy-primitives"]
ws = ["pubsub", "dep:alloy-transport-ws"]
