[package]
name = "alloy-rpc-engine-types"
description = "Alloy RPC engine types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# ethereum
alloy-rlp = { workspace = true, features = ["arrayvec", "derive"] }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rpc-types.workspace = true

serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# jsonrpsee
jsonrpsee-types = { version = "0.20", optional = true }

[features]
jsonrpsee-types = ["dep:jsonrpsee-types"]

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand", "rlp", "serde", "arbitrary"] }

arbitrary = { workspace = true, features = ["derive"] }
rand.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true