[package]
name = "alloy-rpc-types-admin"
description = "Ethereum RPC admin types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-genesis.workspace = true
alloy-primitives = { workspace = true, features = ["serde", "std"] }

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
similar-asserts.workspace = true
