[package]
name = "alloy-rpc-types-anvil"
description = "Types for the Anvil development node's Ethereum JSON-RPC namespace"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth = { workspace = true, features = ["serde"] }
alloy-serde.workspace = true

serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
similar-asserts.workspace = true
