[package]
name = "alloy-rpc-types-any"
description = "Types for any network"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-consensus-any = { workspace = true, features = ["std", "serde"] }
alloy-eips.workspace = true
alloy-network-primitives.workspace = true
alloy-rpc-types-eth = { workspace = true, features = ["serde"] }
alloy-serde.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-primitives.workspace = true
