[package]
name = "alloy-rpc-types-any"
description = "Types for any network"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-consensus-any = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true

serde.workspace = true
serde_json.workspace = true
